[feature/movie] fix: BoxOffice 도메인에 맞춰 ResponseDto 수정