@@ -1,24 +1,24 @@
 package hyundai.movie.domains.movie.api.response;
 
-import hyundai.movie.domains.movie.domain.Movie;
+import hyundai.movie.domains.movie.domain.BoxOffice;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import lombok.Getter;
 
 @Getter
 public class BoxOfficeListResponse {
     private final List<BoxOfficeResponse> movies;
+    private final String targetDate;
 
-    private BoxOfficeListResponse(List<BoxOfficeResponse> movies) {
+    private BoxOfficeListResponse(List<BoxOfficeResponse> movies, String targetDate) {
         this.movies = movies;
+        this.targetDate = targetDate;
     }
 
-    public static BoxOfficeListResponse from(List<Movie> movieList) {
-        List<BoxOfficeResponse> response = IntStream.range(0, movieList.size())
-                .mapToObj(index -> BoxOfficeResponse.of(movieList.get(index), index))
-                .collect(Collectors.toList());
+    public static BoxOfficeListResponse of(List<BoxOffice> boxOfficeList, String targetDate) {
+        List<BoxOfficeResponse> movies = boxOfficeList.stream()
+                .map(BoxOfficeResponse::from)
+                .toList();
 
-        return new BoxOfficeListResponse(response);
+        return new BoxOfficeListResponse(movies, targetDate);
     }
 }
